syntax = "proto3";

package task;

option go_package = "./internal/pb";

service Task {
  rpc CreateTask(CreateTaskRequest) returns (CreateTaskResponse);
  rpc GetTasks(GetTasksRequest) returns (GetTasksResponse);
  rpc DeleteTask(DeleteTaskRequest) returns (DeleteTaskResponse);
}

message CreateTaskRequest {
  string name = 1;
  string description = 2;
  int32 weight = 3;
}

message CreateTaskResponse {
  string id = 1;
  string name = 2;
  string description = 3;
  int32 weight = 4;
}

message GetTasksRequest {}
message GetTasksResponse { repeated TaskObject tasks = 1; }

message DeleteTaskRequest { string id = 1; }
message DeleteTaskResponse {}

message TaskObject {
  string id = 1;
  string name = 2;
  string description = 3;
  int32 weight = 4;
}
